--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ poise = "0.6.1"
 reqwest = { version = "0.12.23", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
-serenity = { version = "0.12", features = ["framework", "standard_framework", "rustls_backend"] }
+serenity = { version = "0.12", features = [
+    "framework",
+    "standard_framework",
+    "rustls_backend",
+] }
 tokio = { version = "1", features = ["full"] }
-tracing-subscriber = "0.3.19"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
