--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,10 +1,17 @@
 name: Build and Push Docker image
-
+paths:
+  - 'src/**'
+  - 'Cargo.toml'
+  - 'Cargo.lock'
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
+permissions:
+  contents: read
+  packages: write
 
 jobs:
   docker:
@@ -24,7 +31,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
 
       - name: Build and Push (amd64 + arm64)
         uses: docker/build-push-action@v6
