--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,7 +14,33 @@ permissions:
   packages: write
 
 jobs:
-  docker:
+  build-amd64:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Build and Push (amd64)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-latest
+            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }}
+
+  build-arm64:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -33,12 +59,35 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
-      - name: Build and Push (amd64 + arm64)
+      - name: Build and Push (arm64)
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/arm64
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-latest
+            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-${{ github.sha }}
+
+  manifest:
+    needs: [build-amd64, build-arm64]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Create and Push Docker Manifest
+        uses: docker/manifest-create-push-action@v1
+        with:
           tags: |
             ghcr.io/${{ github.repository_owner }}/ens_bot:latest
             ghcr.io/${{ github.repository_owner }}/ens_bot:${{ github.sha }}
+          images: |
+            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-latest
+            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-latest
+            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-${{ github.sha }}
