--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,11 +14,27 @@ permissions:
   packages: write
 
 jobs:
-  build-amd64:
+  docker:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: stable
+          targets: ${{ matrix.target }}
+
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
+
+      - name: Build with cross
+        run: cross build --target ${{ matrix.target }} --release
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -39,55 +55,3 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-latest
             ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }}
-
-  build-arm64:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
-
-      - name: Build and Push (arm64)
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          platforms: linux/arm64
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-${{ github.sha }}
-
-  manifest:
-    needs: [build-amd64, build-arm64]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.CR_PAT }}
-
-      - name: Create and Push Docker Manifest
-        uses: docker/manifest-create-push-action@v1
-        with:
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/ens_bot:latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:${{ github.sha }}
-          images: |
-            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }}
-            ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-${{ github.sha }}
