--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ async-trait = "0.1.89"
 dotenvy = "0.15.7"
 once_cell = "1.21.3"
 poise = "0.6.1"
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 serenity = { version = "0.12", features = [
