ci: rename docker image tags

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,12 +46,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.CR_PAT }}
 
-      - name: Build and Push (amd64)
+      - name: Build and push multi-arch Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/ens_bot:latest
+            ghcr.io/${{ github.repository_owner }}/ens_bot:${{ github.sha }}
