--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 async-trait = "0.1.89"
+chrono = { version = "0.4.41", features = ["serde"] }
 dotenvy = "0.15.7"
 once_cell = "1.21.3"
 poise = "0.6.1"
