--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,11 +14,16 @@ permissions:
   packages: write
 
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu]
+        include:
+          - target: x86_64-unknown-linux-gnu
+            arch: amd64
+          - target: aarch64-unknown-linux-gnu
+            arch: arm64
 
     steps:
       - name: Checkout repository
@@ -36,6 +41,11 @@ jobs:
       - name: Build with cross
         run: cross build --target ${{ matrix.target }} --release
 
+      - name: Prepare binary
+        run: |
+          mkdir -p ./docker-bin
+          cp target/${{ matrix.target }}/release/ens_bot ./docker-bin/ens_bot-${{ matrix.arch }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -50,8 +60,27 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/ens_bot:latest
-            ghcr.io/${{ github.repository_owner }}/ens_bot:${{ github.sha }}
+          platforms: linux/${{ matrix.arch }}
+          tags: ghcr.io/${{ github.repository_owner }}/ens_bot:${{ matrix.arch }}-${{ github.sha }}
+          build-args: |
+            BIN=ens_bot-${{ matrix.arch }}
+
+  manifest:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.CR_PAT }}
+
+      - name: Create and push multi-arch manifest
+        run: |
+          docker manifest create ghcr.io/${{ github.repository_owner }}/ens_bot:latest \
+            --amend ghcr.io/${{ github.repository_owner }}/ens_bot:amd64-${{ github.sha }} \
+            --amend ghcr.io/${{ github.repository_owner }}/ens_bot:arm64-${{ github.sha }}
+          docker manifest push ghcr.io/${{ github.repository_owner }}/ens_bot:latest
