--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,57 +1,33 @@
-name: Build Executables
+name: Release
 on:
   push:
     tags:
       - "v*"
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          [
-            x86_64-unknown-linux-gnu,
-            aarch64-unknown-linux-gnu,
-            x86_64-pc-windows-gnu,
-          ]
-        include:
-          - target: x86_64-unknown-linux-gnu
-            name: linux-amd64
-            ext: ""
-          - target: aarch64-unknown-linux-gnu
-            name: linux-arm64
-            ext: ""
-          - target: x86_64-pc-windows-gnu
-            name: windows-amd64
-            ext: ".exe"
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Install Zig
+        uses: korandoru/setup-zig@v1
+        with:
+          zig-version: '0.11.0'
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          targets: ${{ matrix.target }}
 
-      - name: Install cross
-        run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Build with cross
-        run: cross build --target ${{ matrix.target }} --release
-
-      - name: Prepare binary
-        run: |
-          mkdir -p ./artifacts
-          cp target/${{ matrix.target }}/release/ens_bot${{ matrix.ext }} ./artifacts/ens_bot-${{ matrix.name }}${{ matrix.ext }}
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - name: GoReleaser
+        uses: goreleaser/goreleaser-action@v6
         with:
-          name: ens_bot-${{ matrix.name }}
-          path: ./artifacts/ens_bot-${{ matrix.name }}${{ matrix.ext }}
+          version: latest
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
